--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
           <!-- START BLOG TITLE -->
           <div class="split-intro">
-            <h1>Blog Title</h1>
+            <h1>
+              Blog Title
+            </h1>
           </div>
           <!-- END BLOG TITLE -->
 
@@ -42,7 +44,7 @@
             Post Title
           </div>
           <div class="split-bio">
-            <p>All my text goes here. If I want a link I do <a href="http://www.google.com">this</a>.</p>
+            <p>Four score and seven years ago our fathers brought forth, upon this continent, a new nation, conceived in liberty, and dedicated to the proposition that "all men are created equal". Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived, and so dedicated, can long endure. We are met on a great battle field of that war. We have come to dedicate a portion of it, as a final resting place for those who died here, that the nation might live.</p>
           </div>
           <br />
           <hr />
