--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- SEO -->
-    <title>Blog</title>
+    <title>First Assignment</title>
     <meta name="description" content="Split is a centrally-divided layout for a professional online presense with a big image image or video left with alongside content." />
     <meta name="robots" content="index, follow" />
     <meta name="referrer" content="always" />
@@ -34,17 +34,17 @@
           <!-- START BLOG TITLE -->
           <div class="split-intro">
             <h1>
-              Blog Title
+              First Assignment
             </h1>
           </div>
           <!-- END BLOG TITLE -->
 
           <!-- START BLOG POST -->
           <div class="split-intro tagline">
-            Post Title
+            Class Norms
           </div>
           <div class="split-bio">
-            <p>Four score and seven years ago our fathers brought forth, upon this continent, a new nation, conceived in liberty, and dedicated to the proposition that "all men are created equal". Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived, and so dedicated, can long endure. We are met on a great battle field of that war. We have come to dedicate a portion of it, as a final resting place for those who died here, that the nation might live.</p>
+            <p>One thing I can do easily is fix my coding problems. I usually find my mistakes easily and know how to fix them. One thing I will need to improve on is presenting. I hate presenting and am usually never comfortable presenting infront of a class.</p>
           </div>
           <br />
           <hr />
