--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <!-- START BLOG TITLE -->
           <div class="split-intro">
             <h1>
-              First Assignment
+              Blog Posts
             </h1>
           </div>
           <!-- END BLOG TITLE -->
@@ -48,6 +48,17 @@
           </div>
           <br />
           <hr />
+          <!-- END BLOG POST -->
+
+          <!-- START BLOG POST -->
+          <div class="split-intro tagline">
+            What does a good citizen look like in a world where the Bits authors 'two basic morals' exist?
+          </div>
+          <div class="split-bio">
+            <p>I believe that a good citizen doesn't use the technology for bad, but for good. I think that he/she uses it to not do wrong towards others. Also, with social change, a good citizen wouldn't use the social change to hurt people over the internet. I believe that good citizens don't take people for granted online towards people or in a group chat without that person. </p>
+            </div>
+            <br />
+            <hr />
           <!-- END BLOG POST -->
 
           <!-- START FOOTER -->
