--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- SEO -->
-    <title>First Assignment</title>
+    <title>Blog Posts</title>
     <meta name="description" content="Split is a centrally-divided layout for a professional online presense with a big image image or video left with alongside content." />
     <meta name="robots" content="index, follow" />
     <meta name="referrer" content="always" />
@@ -56,6 +56,28 @@
           </div>
           <div class="split-bio">
             <p>I believe that a good citizen doesn't use the technology for bad, but for good. I think that he/she uses it to not do wrong towards others. Also, with social change, a good citizen wouldn't use the social change to hurt people over the internet. I believe that good citizens don't take people for granted online towards people or in a group chat without that person. </p>
+            </div>
+            <br />
+            <hr />
+          <!-- END BLOG POST -->
+
+          <!-- START BLOG POST -->
+          <div class="split-intro tagline">
+            Chips Off the Old Block: Computers Are Taking Design Cues From Human Brains.
+          </div>
+          <div class="split-bio">
+            <p>Computers do a lot in our modern day life. We keep advancing in technology and soon computers won't need humans to function. Even today, technology helps avoid crashes. Some of the world's largest tech companies are creating what looks like artificial intelligence. The companies are creating what is like a robotic brain that lets them have a nervous system to allow them to hear and see the surrounding environment. The companies are trying to progress as far as making artificial intelligence able to work on their own with people. This could mean that there are positive outcomes, but also negative outcomes. The artificial intelligence could become police officers and be faster, stronger and smarter than humans. But terrorists could hack the artificial intelligence or there could be a virus that makes it dangerous to civilians. I believe that it is dangerous to go as far as giving computers a nervous system. I think that there would be too many dangerous outcomes that could happen. I believe that we should wait until there are fewer possible dangerous outcomes, if it is even possible to predict all of the outcomes. “Has the larger tech companies seen any of the Terminator movies, iRobot, or any of the movies where the artificial intelligence take over?” -Melanie Feddersen, 2017. “We are running towards our own annihilation, cheering, ” - Melanie Feddersen, 2017.</p>
+            </div>
+            <br />
+            <hr />
+          <!-- END BLOG POST -->
+
+          <!-- START BLOG POST -->
+          <div class="split-intro tagline">
+
+          </div>
+          <div class="split-bio">
+            <p>According to the CS Principles Facilitator, a for loop is not an example of absraction. He explained how the for loop just helps with the lack of amount of lines of code and makes it more efficient. Also, Baker agrees with CS Principles Facilitator that a for loop is not an example of abstraction.</p>
             </div>
             <br />
             <hr />
